# phidata-project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/mcp_servers/: arxiv_server.py  github_server.py  wikipedia_server.py
src/rag_system/: citation_tracker.py  conversation_memory.py  document_processor.py  mcp_integration.py  rag_engine.py  semantic_search.py  vector_store.py
src/web_interface/: main.py  streamlit_app.py
tests/: conftest.py  test_citation_tracker.py  test_integration.py  test_mcp_integration.py  test_rag_engine.py  test_vector_store.py
