[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-research-assistant"
version = "0.1.0"
description = "Graduate-level RAG system with MCP servers and Phidata integration"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "phidata>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "chromadb>=0.4.15",
    "sentence-transformers>=2.2.2",
    "tiktoken>=0.5.1",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "mcp>=0.9.0",
    "arxiv>=1.4.8",
    "wikipedia>=1.4.0",
    "PyGithub>=1.59.1",
    "openai>=1.3.0",
    "anthropic>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0"
]